# krb5-auth-dialog

./: .cvsignore  .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  CodingStyle  MAINTAINERS  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  configure.ac  krb5-auth-dialog.doap  krb5-auth-dialog.spec.in  meson.build  meson_options.txt  org.gnome.KrbAuthDialog.json
build-aux/: post_install.py
cc-panel/: .gitignore  Makefile.am  cc-ka-panel.c  cc-ka-panel.h  gnome-ka-panel.desktop.in  ka-module.c  ka-panel.ui
data/: krb5-auth-dialog.1.in  krb5-auth-dialog.metainfo.xml.in  meson.build  org.gnome.KrbAuthDialog.gschema.xml  org.gnome.KrbAuthDialog.metainfo.xml.in
data/48x48/: meson.build
etpo/: .cvsignore  .gitignore  Makefile.am  README  grammar.y  lexer.l  meson.build  update-etpo.in
examples/: Makefile.am  destroy-ccache.py  tgt-acquire.py  tgt-signals.py
gtksecentry/: Makefile.am  gtksecentry.c  gtksecentry.h
help/: .gitignore  LINGUAS  Makefile.am  krb5-auth-dialog.omf.in  meson.build
help/C/: index.docbook  krb5-auth-dialog.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/pl/: pl.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
icons/: Makefile.am  meson.build
icons/22x22/: Makefile.am  meson.build
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am  meson.build
plugins/: .gitignore  Makefile.am  ka-plugin-afs.c  ka-plugin-afs.h  ka-plugin-dummy.c  ka-plugin-dummy.h  ka-plugin-gnomelock.c  ka-plugin-gnomelock.h  ka-plugin-pam.c  ka-plugin-pam.h  meson.build
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hi.po  hu.po  id.po  ka.po  kk.po  krb5-auth-dialog.pot  meson.build  nb.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
preferences/: .gitignore  Makefile.am  ka-preferences.c  krb5-auth-dialog-preferences.1.in  krb5-auth-dialog-preferences.c  krb5-auth-dialog-preferences.desktop.in  krb5-auth-dialog-preferences.glade  krb5-auth-dialog-preferences.xml
secmem/: Makefile.am  secmem.c  util.h
src/: .cvsignore  .gitignore  Makefile.am  dummy-strings.c  ka-applet-priv.h  ka-applet.c  ka-applet.h  ka-closures.c  ka-closures.h  ka-dbus.c  ka-dbus.h  ka-dbus.xml  ka-dialog.c  ka-dialog.h  ka-entry-buffer.c  ka-entry-buffer.h  ka-gconf-tools.c  ka-gconf-tools.h  ka-gconf.c  ka-gconf.h  ka-kerberos.c  ka-kerberos.h  ka-main-window.c  ka-main-window.h  ka-plugin-loader.c  ka-plugin-loader.h  ka-plugin.c  ka-plugin.h  ka-preferences.c  ka-preferences.h  ka-pwdialog.c  ka-pwdialog.h  ka-settings.c  ka-settings.h  ka-tickets.c  ka-tickets.h  ka-tools.c  ka-tools.h  krb5-auth-applet-dbus.xml  krb5-auth-applet.c  (+31 more)
src/resources/ui/: app-menu.ui  ka-main-window.ui  ka-preferences.ui  ka-pwdialog.ui  tray-icon-menu.ui
