NULL = 

SUBDIRS = secmem gtksecentry src po etpo icons preferences help

EXTRA_DIST = \
	krb5-auth-dialog.spec \
	MAINTAINERS           \
	gnome-doc-utils.make  \
	$(NULL)

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update \
	gnome-doc-utils.make \
	$(NULL)

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
