noinst_PROGRAMS = etpo
etpo_SOURCES = lexer.l grammar.y
lexer.c: grammar.h
AM_YFLAGS=-d
AM_CFLAGS=\
	@GTK_CFLAGS@ 		 \
	@GLADE_CFLAGS@		 \
	@DBUS_CFLAGS@		 \
	@GCONF_CFLAGS@		 \
	@KRB5_CFLAGS@		 \
	@NETWORK_MANAGER_CFLAGS@ \
	@LIBNOTIFY_CFLAGS@	 \
	@CFLAGS@
AM_LDFLAGS=\
	@NETWORK_MANAGER_LIBS@ \
	@KRB5_LIBS@ \
	@LIBNOTIFY_LIBS@ \
	@DBUS_LIBS@ \
	@GCONF_LIBS@ \
	@GLADE_LIBS@ \
	@GTK_LIBS@

DISTCLEANFILES=lexer.c

