NULL=

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = krb5-auth-dialog
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
	figures/ka-valid.png \
	figures/ka-expired.png \
	figures/ka-expiring.png \
	figures/trayicon-valid.png \
	figures/trayicon-expired.png \
	figures/trayicon-expiring.png \
	$(NULL)

DOC_LINGUAS = cs de el es sl sv \
	$(NULL)
