@YELP_HELP_RULES@
NULL=

HELP_ID = krb5-auth-dialog
HELP_FILES = \
	index.docbook \
	legal.xml \
	$(NULL)
HELP_MEDIA = \
	figures/ka-valid.png \
	figures/ka-expired.png \
	figures/ka-expiring.png \
	figures/trayicon-valid.png \
	figures/trayicon-expired.png \
	figures/trayicon-expiring.png \
	$(NULL)

HELP_LINGUAS = cs de el es pl sl sv \
	$(NULL)
